Impl IG-1857 [Nuclio] Implement new "Status & Monitoring" tab (#130)

--- a/src/igz_controls/less/icons.less
+++ b/src/igz_controls/less/icons.less
@@ -520,6 +520,19 @@
     .generateIconClass(976);
 }
 
+.ncl-icon-error {
+    .generateIconClass(977);
+}
+
+.ncl-icon-building {
+    .generateIconClass(978);
+}
+
+.ncl-icon-ready {
+    .generateIconClass(979);
+}
+
+
 .igz-icon-priority-realtime, .igz-icon-priority-high, .igz-icon-priority-standard, .igz-icon-priority-low {
     display: inline-block;
     font-size: 17px;
