IG-1877 [Browse] Add horizontal scrollbar to editor + wrap

--- a/src/nuclio/common/components/monaco/monaco.tpl.html
+++ b/src/nuclio/common/components/monaco/monaco.tpl.html
@@ -3,5 +3,6 @@
          data-code-file="selectedCodeFile"
          data-editor-theme="$ctrl.selectedTheme"
          data-mini-monaco="$ctrl.miniMonaco"
-         data-read-only="$ctrl.readOnly"></div>
+         data-read-only="$ctrl.readOnly"
+         data-word-wrap="$ctrl.wordWrap"></div>
 </div>
