--- a/src/nuclio/common/components/monaco/monaco.tpl.html
+++ b/src/nuclio/common/components/monaco/monaco.tpl.html
@@ -1,8 +1,10 @@
 <div class="ncl-monaco">
-    <div igz-monaco-editor
-         data-code-file="selectedCodeFile"
-         data-editor-theme="$ctrl.selectedTheme"
-         data-mini-monaco="$ctrl.miniMonaco"
-         data-read-only="$ctrl.readOnly"
-         data-word-wrap="$ctrl.wordWrap"></div>
+    <div class="ncl-monaco-wrapper">
+        <div igz-monaco-editor
+             data-code-file="selectedCodeFile"
+             data-editor-theme="$ctrl.selectedTheme"
+             data-mini-monaco="$ctrl.miniMonaco"
+             data-read-only="$ctrl.readOnly"
+             data-word-wrap="$ctrl.wordWrap"></div>
+    </div>
 </div>
