IG-1876 & IG-1879 (color fixed)

--- a/src/nuclio/common/components/monaco/monaco.less
+++ b/src/nuclio/common/components/monaco/monaco.less
@@ -3,10 +3,15 @@
         padding-top: 20px;
         height: 100%;
         border: 1px solid @ncl-pale-grey;
+        background-color: @ncl-white;
 
         > div {
             height: 100%;
         }
+    }
+
+    .ncl-monaco-dark {
+        background-color: @vs-dark;
     }
 }
 
