--- a/src/igz_controls/less/palette.less
+++ b/src/igz_controls/less/palette.less
@@ -36,6 +36,7 @@
 // NOT in standard palette
 @checkbox-unchecked: #918c9a;
 @slider-bar: #dedce1;
+@vs-dark: #1e1e1e;
 
 
 .checkboxUnchecked(@alpha) {
