--- a/src/nuclio/common/components/monaco/monaco.tpl.html
+++ b/src/nuclio/common/components/monaco/monaco.tpl.html
@@ -1,5 +1,6 @@
 <div class="ncl-monaco">
-    <div class="ncl-monaco-wrapper">
+    <div class="ncl-monaco-wrapper"
+         data-ng-class="{'ncl-monaco-dark': $ctrl.selectedTheme === 'vs-dark'}">
         <div igz-monaco-editor
              data-code-file="selectedCodeFile"
              data-editor-theme="$ctrl.selectedTheme"
