--- a/src/igz_controls/less/icons.less
+++ b/src/igz_controls/less/icons.less
@@ -529,6 +529,42 @@
     .generateIconClass(979);
 }
 
+.ncl-icon-drop-file {
+    .generateIconClass(97a);
+}
+
+.ncl-icon-hand {
+    .generateIconClass(97b);
+}
+
+.ncl-icon-test {
+    .generateIconClass(97c);
+}
+
+.ncl-icon-pin {
+    .generateIconClass(97d);
+}
+
+.ncl-icon-debug {
+    .generateIconClass(97f);
+}
+
+.ncl-icon-copy {
+    .generateIconClass(97e);
+}
+
+.ncl-icon-parameters {
+    .generateIconClass(980);
+}
+
+.ncl-icon-collapse-all {
+    .generateIconClass(981);
+}
+
+.ncl-icon-expand-all {
+    .generateIconClass(982);
+}
+
 
 .igz-icon-priority-realtime, .igz-icon-priority-high, .igz-icon-priority-standard, .igz-icon-priority-low {
     display: inline-block;
