--- a/src/nuclio/common/components/key-value-input/key-value-input.less
+++ b/src/nuclio/common/components/key-value-input/key-value-input.less
@@ -6,6 +6,14 @@
         position: relative;
         border: 1px solid @ncl-pale-grey;
 
+        .check-row {
+            width: 28px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-right: 1px solid @ncl-pale-grey;
+        }
+
         .three-dot-menu {
             position: absolute;
             right: 10px;
@@ -68,6 +76,10 @@
                     }
                 }
             }
+
+            &.use-checkbox {
+                width: 44%;
+            }
         }
 
         .input-value {
@@ -87,6 +99,10 @@
                         border-left: 1px solid @ncl-darkish-pink;
                     }
                 }
+            }
+
+            &.use-checkbox {
+                width: 45%;
             }
         }
 
