fixed visually issue on triggers and renamed trigger-triggers

--- a/src/nuclio/common/components/collapsing-row/collapsing-row.tpl.html
+++ b/src/nuclio/common/components/collapsing-row/collapsing-row.tpl.html
@@ -7,7 +7,7 @@
         </div>
 
         <div data-ng-show="!$ctrl.item.ui.editModeActive" class="igz-row common-table-cells-container item-row">
-            <div class="item-name">
+            <div class="text-ellipsis item-name">
                 {{$ctrl.item.name}}
             </div>
             <div class="item-class">
