IG-1921 [General] Dialog descriptions redesign (improved)

--- a/src/igz_controls/less/dialogs.less
+++ b/src/igz_controls/less/dialogs.less
@@ -130,8 +130,13 @@
                 }
 
                 .question-mark {
+                    display: none;
                     margin-left: 21px;
                     margin-top: 9px;
+                }
+
+                .question-mark-visible {
+                    display: block;
                 }
 
                 .row-description {
