--- a/src/nuclio/common/components/monaco/monaco.less
+++ b/src/nuclio/common/components/monaco/monaco.less
@@ -5,6 +5,10 @@
         border: 1px solid @ncl-pale-grey;
         background-color: @ncl-white;
 
+        &.no-top-padding {
+            padding-top: 0;
+        }
+
         > div {
             height: 100%;
         }
