--- a/src/nuclio/common/components/monaco/monaco.tpl.html
+++ b/src/nuclio/common/components/monaco/monaco.tpl.html
@@ -1,6 +1,7 @@
 <div class="ncl-monaco">
     <div class="ncl-monaco-wrapper"
-         data-ng-class="{'ncl-monaco-dark': $ctrl.selectedTheme === 'vs-dark'}">
+         data-ng-class="{'ncl-monaco-dark': $ctrl.selectedTheme === 'vs-dark',
+                         'no-top-padding': $ctrl.noTopPadding}">
         <div igz-monaco-editor
              data-code-file="selectedCodeFile"
              data-editor-theme="$ctrl.selectedTheme"
