Few visual fixes and cleanup
- Rename `canceller` to `canceler`
- Fix visual issues with fields borders flickr
- Fix tooltip flickr of "New Test" button

--- a/src/nuclio/projects/project/functions/version/version-code/function-event-pane/function-event-pane.less
+++ b/src/nuclio/projects/project/functions/version/version-code/function-event-pane/function-event-pane.less
@@ -208,7 +208,7 @@
                         font-size: 16px;
 
                         &:not(:focus) {
-                            border: none;
+                            border-color: transparent;
                             max-width: 300px;
 
                             &:hover {
@@ -275,7 +275,7 @@
             width: 97px;
 
             .default-dropdown-field:not(:hover) {
-                border: none;
+                border-color: transparent;
             }
         }
 
@@ -285,7 +285,7 @@
 
             .input-field {
                 padding: 0 1px;
-                border: none;
+                border-color: transparent;
                 background-color: @ncl-pale-grey-three;
             }
         }
