fixed comments on https://github.com/iguazio/dashboard-controls/pull/175

--- a/src/nuclio/projects/project/functions/version/version-code/function-event-pane/function-event-pane.less
+++ b/src/nuclio/projects/project/functions/version/version-code/function-event-pane/function-event-pane.less
@@ -170,9 +170,13 @@
             }
         }
 
-        .ncl-test-events-navigation-tabs .test-events-navigation-tab {
-            padding: 10px 22px 0;
+        .ncl-test-events-navigation-tabs {
             background-color: @ncl-white;
+
+            .test-events-navigation-tab {
+                padding: 10px 22px 0;
+                background-color: @ncl-white;
+            }
         }
     }
 
