--- a/src/nuclio/projects/project/functions/version/version-code/version-code.less
+++ b/src/nuclio/projects/project/functions/version/version-code/version-code.less
@@ -15,26 +15,30 @@
 
         .ncl-edit-version-code-wrapper {
             height: 100%;
-            padding: 24px 41px;
+            padding: 24px 41px 0;
 
             .ncl-code-entry-url {
                 width: 700px;
             }
+
+            .ncl-edit-version-code-form {
+                display: flex;
+                flex-direction: column;
+                height: 100%
+            }
         }
 
         .section-wrapper {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
             padding: 18px 39px 0 23px;
         }
 
-        .code-entry-section {
-            flex: 0 1 auto;
-        }
-
         .code-edit-section {
-            position: relative;
-            flex: 1 1 auto;
             display: flex;
-            height: 400px;
+            flex-direction: column;
+            flex: 1;
 
             .code-editor-drop-zone {
                 position: absolute;
@@ -64,9 +68,14 @@
 
             .monaco-code-editor {
                 width: 100%;
+                height: 100%;
+                position: relative;
+                display: flex;
+                flex-direction: column;
 
                 .ncl-monaco {
-                    height: 100%;
+                    position: relative;
+                    flex-direction: column;
                 }
             }
         }
