--- a/src/nuclio/common/less/palette.less
+++ b/src/nuclio/common/less/palette.less
@@ -25,7 +25,11 @@
 @ncl-grey: #acaab3;
 @ncl-greyish-purple: #898593;
 @ncl-dark-greyish-blue: #9997a0;
+@ncl-dusk: #3f4b6a;
+@ncl-dusk-two: #495a81;
 @ncl-dusk-three: #474056;
+@ncl-blue-grey: #4d5978;
+@ncl-dark-blue-grey: #101833;
 @ncl-dark-grey: #0a0a0a;
 @ncl-black: #000000;
 @ncl-orangish: #f9794f;
