--- a/src/igz_controls/less/icons.less
+++ b/src/igz_controls/less/icons.less
@@ -565,6 +565,9 @@
     .generateIconClass(982);
 }
 
+.ncl-icon-functions {
+    .generateIconClass(983);
+}
 
 .igz-icon-priority-realtime, .igz-icon-priority-high, .igz-icon-priority-standard, .igz-icon-priority-low {
     display: inline-block;
