--- a/src/nuclio/projects/project/functions/create-function/function-from-template/function-from-template.less
+++ b/src/nuclio/projects/project/functions/create-function/function-from-template/function-from-template.less
@@ -8,7 +8,7 @@
             width: 50%;
             display: flex;
             justify-content: flex-end;
-            margin-bottom: 8px;
+            margin-bottom: 2px;
 
             .function-name {
                 width: 100%;
@@ -33,6 +33,85 @@
             font-size: 16px;
             font-weight: bold;
             color: @ncl-dusk-three;
+        }
+
+        .templates-controls {
+            display: flex;
+            padding-right: 16px;
+            margin-top: 2px;
+            height: 55px;
+
+            .templates-search-input {
+                width: 71%;
+                display: flex;
+                position: relative;
+                flex-direction: column;
+                justify-content: flex-end;
+                margin-right: 20px;
+
+                .search-icon {
+                    color: @ncl-greyish-purple;
+                    font-size: 18px;
+                    position: absolute;
+                    left: 8px;
+                    top: 24px;
+                }
+
+                .input-field {
+                    width: 100%;
+                    border: none;
+                    background-color: transparent;
+                    color: @ncl-greyish-purple;
+                    border-bottom: 1px solid @ncl-greyish-purple;
+                    padding: 3px 0 9px 32px;
+
+                    &:focus {
+                        outline: none;
+                        color: @ncl-dusk-three;
+                        border-bottom: 1px solid @ncl-light-blue-two;
+                    }
+                }
+            }
+
+            .templates-runtime-drop-down {
+                width: 13%;
+
+                .input-label {
+                    font-size: 14px;
+                    font-weight: 600;
+                    color: @ncl-dusk-three;
+                }
+
+                igz-default-dropdown {
+                    .default-dropdown {
+                        background-color: @ncl-white;
+
+                        .default-dropdown-field {
+                            &:focus {
+                                background-color: inherit;
+                            }
+                        }
+                    }
+                }
+            }
+
+            .templates-pagination {
+                min-width: 237px;
+                display: flex;
+                align-items: flex-end;
+                justify-content: flex-end;
+
+                .title {
+                    font-size: 13px;
+                    font-weight: normal;
+                    color: @ncl-dusk-three;
+                }
+
+                .igz-pagination {
+                    padding-right: 0;
+                    padding-bottom: 0;
+                }
+            }
         }
 
         .function-templates {
@@ -69,18 +148,40 @@
                     }
                 }
 
-                .template-check-box {
+                .add-template-icon-wrapper {
+                    display: none;
+                    width: 34px;
+                    height: 34px;
                     position: absolute;
-                    top: 13px;
-                    right: 17px;
-                    color: @ncl-silver;
-                    font-size: 18px;
+                    top: 0;
+                    right: 0;
+                    background-color: @ncl-blue;
+                    border-bottom-left-radius: 4px;
+
+                    .igz-icon-add {
+                        color: @ncl-white;
+                        font-size: 10px;
+                    }
+
+                    &.disabled {
+                        background-color: @ncl-pale-grey;
+                        border: solid 1px @ncl-pale-grey;
+                        box-shadow: none;
+                        cursor: default;
+                    }
 
                     &.selected {
-                        color: @ncl-blue;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                    }
 
-                        &:before {
-                            content: '\e934';
+                    &:active {
+                        &:not(.disabled) {
+                            background-color: @ncl-bluish;
+                            box-shadow: inset 0.4px 1.9px 3px 0 rgba(0, 0, 0, 0.2);
+                            border: none;
+                            outline: none;
                         }
                     }
                 }
