--- a/src/nuclio/common/components/breadcrumbs/breadcrumbs.tpl.html
+++ b/src/nuclio/common/components/breadcrumbs/breadcrumbs.tpl.html
@@ -14,7 +14,7 @@
                               data-title=""
                               data-project="$ctrl.mainHeaderTitle.project"
                               data-type="projects"
-                              data-get-functions="$ctrl.getFunctions({id: id, namespace: namespace})"
+                              data-get-functions="$ctrl.getFunctions({id: id})"
                               data-get-projects="$ctrl.getProjects()">
     </ncl-breadcrumbs-dropdown>
 </span>
@@ -28,7 +28,7 @@
                                   data-title=""
                                   data-project="$ctrl.mainHeaderTitle.project"
                                   data-type="functions"
-                                  data-get-functions="$ctrl.getFunctions({id: id, namespace: namespace})"
+                                  data-get-functions="$ctrl.getFunctions({id: id})"
                                   data-get-projects="$ctrl.getProjects()">
         </ncl-breadcrumbs-dropdown>
 </span>
